# khealthcertificate

./: .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KHealthCertificateConfig.cmake.in  README.md  metainfo.yaml
src/lib/: CMakeLists.txt  cborutils.cpp  cborutils_p.h  coseparser.cpp  coseparser.h  coseparser_p.h  divocparser_p.h  eudgcparser.cpp  eudgcparser.h  jsonld.cpp  jsonld_p.h  jwkloader_p.h  jwsverifier.cpp  jwsverifier_p.h  jwtparser.cpp  jwtparser_p.h  khealthcertificate.cpp  khealthcertificate.h  khealthcertificateparser.cpp  khealthcertificateparser.h  khealthcertificatetypes.h  khealthcertificatetypes_p.h  krecoverycertificate.cpp  krecoverycertificate.h  ktestcertificate.cpp  ktestcertificate.h  kvaccinationcertificate.cpp  kvaccinationcertificate.h  opensslpp.h  opensslpp_p.h  rdf.cpp  rdf_p.h  shcparser.cpp  shcparser_p.h  verifiablecredentialparser.cpp  verifiablecredentialparser.h  verifiablecredentialparser_p.h  verify.cpp  verify_p.h  zlib.cpp
src/lib/data/: data.qrc
src/lib/data/divoc/: vaccination-v1.json.license
src/lib/data/eu-dgc/: ma.json  mp.json  tcMa.json  tg.json  vp.json
src/lib/data/eu-dgc/certs/: 00dd4478b20c026a.pem  011acd90246da6b6.pem  04a04584d1575805.pem  0a3d0ac0ea5116f4.pem  0af988e313a8323e.pem  10349663c1e7ba5e.pem  12be4e4ccc0b77bf.pem  133611d6e93f1342.pem  1433498da4825a2d.pem  16172217f8f7a658.pem  16d53003db87268a.pem  18c14c06ed519428.pem  1ae40f411c5b32c5.pem  1af551ddee952483.pem  1de5aecc6c043397.pem  1fa6fa6d0f2a8a3e.pem  20a32cb5ff328ffe.pem  2197ed14b4662866.pem  21a191dbcdd4d630.pem  22cd89b6b3898629.pem  234faa90e2ebd9ed.pem  25984c2d5f46c9c9.pem  263aa5f6b06b8c72.pem  26415e9097a5ebfa.pem  (+117 more)
src/lib/data/shc/: hl7-cvx-codes.json
src/lib/divoc/: divocparser.cpp  divocparser_p.h  jsonld.cpp  jsonld_p.h  jwsverifier.cpp  jwsverifier_p.h  rdf.cpp  rdf_p.h
src/lib/divoc/data/: credentials-v1.json.license  divoc-data.qrc  vaccination-v1.json
src/lib/eu-dgc/: cborutils.cpp  cborutils_p.h  coseparser.cpp  coseparser_p.h  eudgcparser.cpp  eudgcparser_p.h
src/lib/eu-dgc/certs/: 0005503d7dced5fa.der  00dd4478b20c026a.der  00dd4478b20c026a.pem  00ff92e6482360a6.der  0100860f276c4b54.der  0100860f276c4b54.pem  011acd90246da6b6.der  017fe6e0f0c30971.der  017fe6e0f0c30971.pem  01c3a60d6a66ee42.der  01c3a60d6a66ee42.pem  01dd45e6fd56da3e.der  0203773a7d54f239.der  0203773a7d54f239.pem  0206874488c969c0.der  0251a51071badff2.der  0269fb11a072d5a8.der  0269fb11a072d5a8.pem  02a8ba3f8d036ea7.der  02da46e5f6c89593.der  02da46e5f6c89593.pem  03ef6a326aee673f.der  03ef6a326aee673f.pem  0449ef3159cd14af.der  0449ef3159cd14af.pem  04963e8f39acb3ed.der  04a04584d1575805.der  04a2621875ad2d57.der  04ce38867e579b32.der  052f26632156c6d3.der  052f26632156c6d3.pem  05a380b5513f064e.der  05df679c1608f3b6.der  05df679c1608f3b6.pem  064c431979688048.der  0656c2c01fd8808a.der  066d0d0382fa8be1.der  066d0d0382fa8be1.pem  070e44dc527a85b0.der  070e44dc527a85b0.pem  (+1154 more)
src/lib/eu-dgc/data/: eu-dgc-data.qrc  ma.json  mp.json  tcMa.json  tcTr.json  tcTt.json  vp.json
src/lib/icao/: icaovdsparser.cpp  icaovdsparser_p.h
src/lib/icao/certs/: icao-csca-certs.qrc
src/lib/icao/data/: diseases.json  icaovds-data.qrc  vaccines.json
src/lib/nl-coronacheck/: irmapublickey.cpp  irmapublickey_p.h  irmaverifier.cpp  irmaverifier_p.h  nlbase45.cpp  nlbase45_p.h  nlcoronacheckparser.cpp  nlcoronacheckparser_p.h
src/lib/nl-coronacheck/keys/: VWS-CC-3.xml  VWS-CC-4.xml  VWS-CC-5.xml  VWS-CC-6.xml  VWS-CC-7.xml  VWS-CC-8.xml  VWS-CC-9.xml  nl-public-keys.qrc
src/lib/openssl/: asn1_p.h  bignum_p.h  config-openssl_p.h.in  opensslpp_p.h  verify.cpp  x509loader.cpp  x509loader_p.h
src/lib/shc/: jwkloader.cpp  jwkloader_p.h  jwtparser.cpp  shcparser.cpp  shcparser_p.h
src/lib/shc/certs/: -7KwyVSAe4g37WuMgIfw1HD8z1_LVsX8zqcwagZlQBo.jwk  -AwbW_LMJ2UCWd67gqxc5Kvz3Od3fFSHrniFB2P8vpA.jwk  -IgAJf77qAqSQGRHMXqAik9MDgFc2jk3JiLZQpuSQ2A.jwk  -MhcwalYrsFlCdSkM02QaT-av4I8YgZAavGw5R4VGdw.jwk  -Op_l5Cs2yvAEcQp-6WFFIUzjFEuANXf2E71uXRxWg8.jwk  -RtOtSoIDwwliuW1LfntCINuM8jcsh3G0TpgHJFkuLg.jwk  -Zl9IpZfFh3tYrojgmsfU34ulkdvsdKmELCOyHSaYZ0.jwk  -_r7w_x7idqVXnRTLWtTx9rERBy2899yqRGgJCOPG7w.jwk  -_uyYYwS3b8zJnU0OFgEhXpUgdSFzp51kJjo8K-g-Sk.jwk  -b19goNbl4_TqU-BngNWMobzTZc6XG-bpSVQppsh7TY.jwk  -dznmcx21Vu7QQkxz4u4ki-d7XyuBj2Q7_KBdoBGuLE.jwk  -h7TjqJB9Sn2yp2e9wO-Pf6YibiRGKjceNHgLGBvaM8.jwk  -n9npwuiFpXrkXfFBCgdbSgcX3C_yAZ03gWkZpjrnvc.jwk  07gMGu-bZ8Oq0hva4Me2OdV28NNZ7LJ6UspgEyncUfg.jwk  08IMBTeXJ7px5KXBRgJK_qm3QU3eD1VR8mClLsi_Sck.jwk  0Hs0endtJ3U4Saxq2KF6-bC4UJp5mkuibFk4AVviieI.jwk  0IkOoOtxTAp0DpLmK2na2rpCnKF7LGhngdT3hIGFWnQ.jwk  0_ZcobwGIYr7HFa8F1Y3nWbC63_d6MR880hNRB0mCzk.jwk  0jzWwbsnyP2wrDPYMCe96n0DztcJBVZLNwAq0VghGG4.jwk  0skYja5xi7ZEP1t2sLtaNBVlYGVvNh9rEOcXt0YywlA.jwk  1cbWQj6OEipUmkMhXGpgGPSf83uWS4ew4bJPpkbcong.jwk  1j8HNfXiWLFT8qTSld_2uvCgYjyAdxjhig4XzBkRvRA.jwk  2ERcjZgrojfX64RG8MBu6EvsW-7qmYGg_18LITMjO1s.jwk  2IfE2paj2TPh_-pC9nVIMaKKqUqb2hzoMFcRpX2l3Y4.jwk  2XlWk1UQMqavMtLt-aX35q_q9snFtGgdjH4-Y1gfH1M.jwk  2Z7GoHSkbDFuMxLgiGiMFDND31_G5n_I7ObMzMfGm4Q.jwk  2bzOyga7BXGGfAQgcR2zyBckp7S_uezwgan57EwQN80.jwk  2fWAF7o9jARYkwTrrq1w3kyviGhoKOf7rwZIs9epHkE.jwk  2gE2ashpDfzsbMfw4Mi6akYTE-jAr7YKCqqg8yZouZs.jwk  348jzyKWtD8225Duqr6zJHqw-Jc0jlXm_pCWq6Nw_1c.jwk  35iLwiFy_yB7mTxH2IpdSA94Z0mbo2PB5xqoo02BFhU.jwk  3PGPSVUemUL6vtrXBm4IEcgZuFbqm8wDF4-VGSNW0YU.jwk  3QNulnBJO6wZu6HQy5tAS5pGsxnDj2MJMhgLtsmUptA.jwk  3Ujv5kjdbTwbZAfjC5OrWCHDnJtENU3sTckG-vmZzHw.jwk  3a9rtgYUQe5RXpv2oM_DkXnd-h_1ZWfPkRrpcvtIY4A.jwk  3c7B_9lJp1tpByY1jBxnKpef7hNngBtujma1sa1BAdU.jwk  4S4NI0l6wC6YBNPSdp8upWraj9XayAdQYUU-ycC6qcw.jwk  4S5oS222XceZXz5ROPy8lyQhSIbPk4eTrMXXThyMGqA.jwk  4XZuZB_fUaf_6Dsk7d5GonSo7oiPEXeW1EcZIP33gOI.jwk  4a560ef3-49d3-4463-bd28-70efba817c1e.jwk  (+428 more)
src/lib/shc/data/: hl7-cvx-codes.json  shc-data.qrc
src/lib/zlib/: zlib_p.h
src/qml/: CMakeLists.txt  khealthcertificateqmlplugin.cpp  qmldir
tests/: CMakeLists.txt  RecoveryCertificatePage.qml  TestCertificatePage.qml  VaccinationCertificatePage.qml  eu-dgc-decoder.cpp  health-certificate-viewer.qml  nl-decoder.cpp
(+43 files in other folders)
